tests/fixtures/invalid/str_gt_list.py
# Cannot compare with > Str and List[int]
x: bool = "hello" > [1, 2, 3]
